refactor:重构消息推送规范逻辑
